// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lexer more tests 1`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    2,
    "<%",
    0,
    2,
  ],
  [
    10,
    " var a = 1; ",
    2,
    14,
  ],
  [
    3,
    "%>",
    14,
    16,
  ],
  [
    1,
    " ...",
    16,
    21,
  ],
  [
    0,
    null,
    21,
    22,
  ],
]
`;

exports[`Lexer more tests 2`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    2,
    "<%",
    0,
    2,
  ],
  [
    10,
    " var a = 1;",
    2,
    13,
  ],
  [
    0,
    " ",
    13,
    14,
  ],
]
`;

exports[`Lexer more tests 3`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    4,
    "<%# var a = 1; ",
    0,
    15,
  ],
  [
    0,
    null,
    15,
    16,
  ],
]
`;

exports[`Lexer more tests 4`] = `
[
  [
    1,
    "<%% var a = 1; ",
    0,
    16,
  ],
  [
    0,
    null,
    16,
    17,
  ],
]
`;

exports[`Lexer more tests 5`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    5,
    "<?=",
    0,
    3,
  ],
  [
    10,
    " foo ",
    3,
    8,
  ],
  [
    3,
    "?>",
    8,
    10,
  ],
  [
    0,
    null,
    10,
    11,
  ],
]
`;

exports[`Lexer should tokenize a comment 1`] = `
[
  [
    1,
    "Hello ",
    0,
    6,
  ],
  [
    2,
    "<%",
    6,
    8,
  ],
  [
    10,
    " ",
    8,
    9,
  ],
  [
    13,
    "# this is a % comment ",
    9,
    31,
  ],
  [
    3,
    "%>",
    31,
    33,
  ],
  [
    0,
    null,
    33,
    34,
  ],
]
`;

exports[`Lexer should tokenize a comment 2`] = `
[
  [
    1,
    "Hello ",
    0,
    6,
  ],
  [
    2,
    "<%",
    6,
    8,
  ],
  [
    10,
    " ",
    8,
    9,
  ],
  [
    13,
    "# this is a comment ",
    9,
    29,
  ],
  [
    9,
    "_%>",
    29,
    32,
  ],
  [
    0,
    null,
    32,
    33,
  ],
]
`;

exports[`Lexer should tokenize a comment 3`] = `
[
  [
    1,
    "Hello ",
    0,
    6,
  ],
  [
    2,
    "<%",
    6,
    8,
  ],
  [
    10,
    " ",
    8,
    9,
  ],
  [
    13,
    "// this is a comment",
    9,
    29,
  ],
  [
    10,
    "
 var = 1; ",
    29,
    40,
  ],
  [
    3,
    "%>",
    40,
    42,
  ],
  [
    0,
    null,
    42,
    43,
  ],
]
`;

exports[`Lexer should tokenize a simple template 1`] = `
[
  [
    1,
    "Hello ",
    0,
    6,
  ],
  [
    2,
    "<%",
    6,
    8,
  ],
  [
    10,
    " var a = 1; ",
    8,
    20,
  ],
  [
    3,
    "%>",
    20,
    22,
  ],
  [
    1,
    " ",
    22,
    23,
  ],
  [
    5,
    "<%=",
    23,
    26,
  ],
  [
    10,
    " a ",
    26,
    29,
  ],
  [
    3,
    "%>",
    29,
    31,
  ],
  [
    0,
    null,
    31,
    32,
  ],
]
`;

exports[`Lexer should tokenize comment tags 1`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    4,
    "<%# this is a comment %>",
    0,
    24,
  ],
  [
    0,
    null,
    24,
    25,
  ],
]
`;

exports[`Lexer should tokenize escaped output 1`] = `
[
  [
    1,
    "Value: ",
    0,
    7,
  ],
  [
    5,
    "<%=",
    7,
    10,
  ],
  [
    10,
    " value ",
    10,
    17,
  ],
  [
    3,
    "%>",
    17,
    19,
  ],
  [
    0,
    null,
    19,
    20,
  ],
]
`;

exports[`Lexer should tokenize multilne comments 1`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    2,
    "<%",
    0,
    2,
  ],
  [
    10,
    " ",
    2,
    3,
  ],
  [
    13,
    "/* this is a comment, and closing tag %> is ignored */",
    3,
    57,
  ],
  [
    10,
    " ",
    57,
    58,
  ],
  [
    3,
    "%>",
    58,
    60,
  ],
  [
    0,
    null,
    60,
    61,
  ],
]
`;

exports[`Lexer should tokenize regexps 1`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    2,
    "<%",
    0,
    2,
  ],
  [
    10,
    " var re = /<%.*",
    2,
    17,
  ],
  [
    3,
    "%>",
    17,
    19,
  ],
  [
    1,
    "/g; %>",
    19,
    26,
  ],
  [
    0,
    null,
    26,
    27,
  ],
]
`;

exports[`Lexer should tokenize texts 1`] = `
[
  [
    1,
    "",
    0,
    0,
  ],
  [
    5,
    "<%=",
    0,
    3,
  ],
  [
    10,
    " ",
    3,
    4,
  ],
  [
    12,
    ""Hello, \\n World!"",
    4,
    22,
  ],
  [
    10,
    " ",
    22,
    23,
  ],
  [
    3,
    "%>",
    23,
    25,
  ],
  [
    0,
    null,
    25,
    26,
  ],
]
`;

exports[`Lexer should tokenize unescaped output 1`] = `
[
  [
    1,
    "Value: ",
    0,
    7,
  ],
  [
    6,
    "<%-",
    7,
    10,
  ],
  [
    10,
    " value ",
    10,
    17,
  ],
  [
    8,
    "-%>",
    17,
    20,
  ],
  [
    0,
    null,
    20,
    21,
  ],
]
`;

exports[`Lexer should tokenize whitespace control 1`] = `
[
  [
    1,
    "Hello ",
    0,
    6,
  ],
  [
    7,
    "<%_",
    6,
    9,
  ],
  [
    10,
    " var a = 1; ",
    9,
    21,
  ],
  [
    9,
    "_%>",
    21,
    24,
  ],
  [
    1,
    " ",
    24,
    25,
  ],
  [
    5,
    "<%=",
    25,
    28,
  ],
  [
    10,
    " a ",
    28,
    31,
  ],
  [
    3,
    "%>",
    31,
    33,
  ],
  [
    0,
    null,
    33,
    34,
  ],
]
`;
